This is the file for running using the docker

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -60,7 +60,7 @@ coverage/
 Thumbs.db
 
 # Docker
-docker-compose.override.yml
+# docker-compose.override.yml
 
 # Testing (Jest, Mocha, etc.)
 /junit.xml
